<resources>
    <string name="app_name">Quizzes</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_question">Add Question</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="question">Question</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="false_answer">False Answer</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_question_message">Once deleted, you will not be able to retrieve this question.</string>
    <string name="changes_will_be_lost">Upon returning to the menu screen, changes to this quiz will be lost.</string>
    <string name="return_to_menu">Return To Menu</string>
    <string name="question_already_exists">This question already exists.</string>
    <string name="two_same_questions">All questions must be different.</string>
    <string name="ok">OK</string>
    <string name="delete_quiz_message">Once deleted, you will not be able to retrieve this quiz.</string>
    <string name="quiz_already_exists">This quiz already exists.</string>
    <string name="two_same_quizzes">All quizzes must be different.</string>
    <string name="correct_answer_chosen">Correct! Tap the right side of the screen to continue.</string>
    <string name="incorrect_answer_chosen">Incorrect! Tap the right side of the screen to continue.</string>
    <string name="quiz_finished">Quiz Finished!</string>
    <string name="retry_quiz">Retry Quiz</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="valid_email">Please input a valid email address.</string>
    <string name="username_taken">The specified username is already in use.</string>
    <string name="email_taken">The specified email is already in use.</string>
    <string name="already_have_account">Already have an account? Login.</string>
    <string name="quiz_empty">Quiz Is Empty</string>
    <string name="no_changes_will_be_made">If you proceed, no changes will be made.</string>
    <string name="quiz_must_have_questions">The created quiz must have questions.</string>
    <string name="duplicate_answer">The question contains a duplicate answer.</string>
    <string name="unique_answers_only">Only unique answers should be used.</string>
</resources>
