<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michel.quizzes20.AddNewQuizActivity">

    <EditText
        android:id="@+id/et_quiz_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/quiz_name" />

    <Button
        android:id="@+id/btn_finish_adding_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="finishAddingQuiz"
        android:text="@string/finish"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_add_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_toStartOf="@id/btn_finish_adding_quiz"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="addNewQuestion"
        android:text="@string/add_question"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_add_question"
        android:layout_below="@id/et_quiz_name">

        <LinearLayout
            android:id="@+id/ll_questions_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
